Added lp-doowelra004 homepage img

--- a/223-150-0790/data.yaml
+++ b/223-150-0790/data.yaml
@@ -73,7 +73,7 @@ siteSpecific:
       matterportID: TrGwES3vmzu
       menu: Virtual Tour
     homePageData:
-      imageName: images/A002-400arlewoodct-living-1-4.jpg
+      imageName: A8.jpg
       addressLine1: 'Awesome San Ramon Home'
       addressLine2: ''
       bedsAndBaths: '4 Bedroom, 3 bath. 2494 sq.ft on 4011 sq.ft lot. Built in 2002'
