--- a/223-150-0790/data.yaml
+++ b/223-150-0790/data.yaml
@@ -2,6 +2,7 @@
 siteName:
   - lp-showcase
   - lp-doowelra004
+  - lp-openhouse
 priceAndFeatures:
   title1: "Beautiful San Ramon Home"
   title2: "Beautiful single family San Ramon Home. Built in 2002 on a 4911 sq.ft lot."
@@ -80,3 +81,11 @@ siteSpecific:
       price: ''
       listingPageURL:
     propertyPageSectionsOrder: [virtualTour, photos, priceAndFeatures, description, contact, realtor]
+  lp-openhouse:
+    homePageData:
+      imageName: A8.jpg
+      addressLine1: 'Awesome Windemere home. New flooring and upgraded backyard.'
+      addressLine2: ''
+      bedsAndBaths: '4 Bedroom, 3 bath. 2494 sq.ft on 4011 sq.ft lot. Built in 2002'
+      price: ''
+      listingPageURL: https://ns-blue-weberealty.thrivebrokers.com/lp-doowelra004/9029-948-677
