--- a/home/data.yaml
+++ b/home/data.yaml
@@ -7,6 +7,7 @@ siteName:
   - lp-rderemnalla7741
   - lp-nlannaira3171
   - lp-doowelra004
+  - lp-openhouse
 showcase:
   menu: Showcase
   properties:
@@ -48,3 +49,8 @@ siteSpecific:
       menu: Showcase
       properties:
       sectionTitle: Showcase
+  lp-openhouse:
+    showcase: 
+      menu: Openhouse
+      properties:
+      sectionTitle: Openhouse
