Testing openhouse propertypage generation

--- a/223-200-022/data.yaml
+++ b/223-200-022/data.yaml
@@ -99,3 +99,9 @@ siteSpecific:
       disable: true
     virtualTour:
       disable: true
+    realtor:
+      disable: true
+    footer:
+      disable: true
+    page:
+      disable: true
